progress on creating encoder via masks

--- a/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
@@ -367,14 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://stackoverflow.com/a/31530106\n",
-    "def extract_blocks(a, blocksize, keep_as_view=False):\n",
-    "    M,N = a.shape\n",
-    "    b0, b1 = blocksize\n",
-    "    if keep_as_view==0:\n",
-    "        return a.reshape(M//b0,b0,N//b1,b1).swapaxes(1,2).reshape(-1,b0,b1)\n",
-    "    else:\n",
-    "        return a.reshape(M//b0,b0,N//b1,b1).swapaxes(1,2)"
+    "draw_y"
    ]
   },
   {
@@ -383,43 +376,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.arange(0,21)\n",
-    "y = np.arange(0,21)\n",
+    "# https://stackoverflow.com/a/31530106\n",
+    "def extract_blocks(a, blocksize):\n",
+    "    M,N = a.shape\n",
+    "    b0, b1 = blocksize\n",
+    "    \n",
+    "    a = tf.reshape(a, (M//b0,b0,N//b1,b1))\n",
+    "    a = tf.transpose(a, (0,2,1))\n",
+    "    a = tf.reshape(-1, b0, b1)\n",
+    "    \n",
+    "    return a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMG_SIZE = 128\n",
+    "\n",
+    "def reduce_expanded_mask(expanded_mask):\n",
+    "    return np.mean(np.mean(tf.reshape(expanded_mask, (128, 16, 128, 16)), axis=1), axis=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(0,IMG_SIZE)\n",
+    "y = np.arange(0,IMG_SIZE)\n",
     "\n",
     "xx, yy = np.meshgrid(x, y)\n",
     "\n",
     "dx = 1/16\n",
-    "x_expand = np.arange(-0.5 + dx/2, 20.5, dx)\n",
-    "y_expand = np.arange(-0.5 + dx/2, 20.5, dx)\n",
+    "x_expand = np.arange(-0.5 + dx/2, 127.5, dx)\n",
+    "y_expand = np.arange(-0.5 + dx/2, 127.5, dx)\n",
     "\n",
     "xx_expand, yy_expand = np.meshgrid(x_expand, y_expand)\n",
     "\n",
-    "centre = [5.55, 10]\n",
-    "radius = 4\n",
+    "bb_radius_sqrd = (bb_diameter / 2)**2\n",
     "\n",
-    "expanded_mask = (xx_expand - centre[0])**2 + (yy_expand - centre[1])**2 <= radius**2\n",
-    "circle_mask = np.mean(np.mean(extract_blocks(expanded_mask, [16,16]), axis=2), axis=1).reshape((21,21))\n",
+    "def get_circle_mask(bb_centre):\n",
+    "    expanded_mask = (xx_expand - bb_centre[0])**2 + (yy_expand - bb_centre[1])**2 <= bb_radius_sqrd\n",
+    "    circle_mask = reduce_expanded_mask(expanded_mask)\n",
+    "    \n",
+    "    return circle_mask * 2 - 1\n",
+    "\n",
+    "\n",
+    "circle_mask = get_circle_mask(bb_centre)\n",
     "\n",
     "plt.pcolormesh(x - .5, y - .5, circle_mask)\n",
+    "plt.colorbar()\n",
     "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_expand[0:16]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "21 * 16"
    ]
   },
   {
@@ -450,24 +468,194 @@
     "    xx_transformed = tf.reshape(xx_transformed, xx.shape)\n",
     "    yy_transformed = tf.reshape(yy_transformed, yy.shape)\n",
     "\n",
-    "    return xx_transformed, yy_transformed\n",
+    "    return xx_transformed, yy_transformed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = get_transformation_matrix(field_centre, field_rotation)\n",
+    "transformed_x, transformed_y = apply_transform(draw_x, draw_y, transform)\n",
+    "\n",
+    "bounds_x = transformed_x[0:4]\n",
+    "bounds_y = transformed_y[0:4]\n",
+    "\n",
+    "plt.plot(transformed_x, transformed_y)\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds_x = transformed_x[0:4]\n",
+    "bounds_y = transformed_y[0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "veritcal_sort = tf.argsort(bounds_y)\n",
+    "horizontal_sort = tf.argsort(bounds_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "veritcal_sort[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_partial_rect_mask(sort_indices, invert=False, horizontal=False):\n",
+    "    x1 = bounds_x[sort_indices[0]]\n",
+    "    x2 = bounds_x[sort_indices[1]]\n",
+    "\n",
+    "    y1 = bounds_y[sort_indices[0]]\n",
+    "    y2 = bounds_y[sort_indices[1]]\n",
+    "    \n",
+    "    m = (y2 - y1)/(x2 - x1)\n",
+    "    c = y1 - m * x1\n",
+    "    \n",
+    "    if horizontal:\n",
+    "        if invert:\n",
+    "            rect_mask = (yy_expand - c) / m >= xx_expand\n",
+    "        else:\n",
+    "            rect_mask = (yy_expand - c) / m <= xx_expand\n",
+    "    else: \n",
+    "        if invert:\n",
+    "            rect_mask = yy_expand <= xx_expand*m + c\n",
+    "        else:\n",
+    "            rect_mask = yy_expand >= xx_expand*m + c\n",
+    "    \n",
+    "    return rect_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([veritcal_sort[0], veritcal_sort[1]]))\n",
+    "# plt.plot(transformed_x, transformed_y)\n",
+    "# plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([veritcal_sort[2], veritcal_sort[3]], invert=True))\n",
+    "# plt.plot(transformed_x, transformed_y)\n",
+    "# plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([horizontal_sort[0], horizontal_sort[1]], horizontal=True))\n",
+    "# plt.plot(transformed_x, transformed_y)\n",
+    "# plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([horizontal_sort[2], horizontal_sort[3]], horizontal=True, invert=True))\n",
+    "# plt.plot(transformed_x, transformed_y)\n",
+    "# plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rect_mask(field_centre, field_rotation):\n",
+    "    transform = get_transformation_matrix(field_centre, field_rotation)\n",
+    "    transformed_x, transformed_y = apply_transform(draw_x, draw_y, transform)\n",
+    "\n",
+    "    bounds_x = transformed_x[0:4]\n",
+    "    bounds_y = transformed_y[0:4]\n",
+    "\n",
+    "    \n",
+    "    veritcal_sort = tf.argsort(bounds_y)\n",
+    "    horizontal_sort = tf.argsort(bounds_x)\n",
+    "    \n",
+    "    expanded_mask = (\n",
+    "        get_partial_rect_mask([veritcal_sort[0], veritcal_sort[1]]) &\n",
+    "        get_partial_rect_mask([veritcal_sort[2], veritcal_sort[3]], invert=True) &\n",
+    "        get_partial_rect_mask([horizontal_sort[0], horizontal_sort[1]], horizontal=True) & \n",
+    "        get_partial_rect_mask([horizontal_sort[2], horizontal_sort[3]], horizontal=True, invert=True)\n",
+    "    )\n",
+    "    \n",
+    "    return reduce_expanded_mask(expanded_mask) * 2 - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rect_mask = get_rect_mask(field_centre, field_rotation)\n",
+    "\n",
+    "plt.pcolormesh(x - .5, y - .5, rect_mask)\n",
+    "# plt.plot(transformed_x, transformed_y)\n",
+    "plt.axis('equal')\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "@tf.function\n",
     "def create_mask(field_centre, field_rotation, bb_centre):\n",
-    "    field_transform = get_transformation_matrix(field_centre, field_rotation)\n",
-    "\n",
-    "    rect_x, rect_y = apply_transform(draw_x, draw_y, field_transform)\n",
-    "    rect_points = tf.stack([rect_x, rect_y])\n",
-    "\n",
-    "    rectangle = matplotlib.path.Path(rect_points)\n",
-    "\n",
-    "    points = np.swapaxes(np.vstack([xx_about_zero.ravel(), yy_about_zero.ravel()]), 0, 1)\n",
-    "    rectangle_mask = rectangle.contains_points(points).reshape(len(yy_about_zero), len(xx_about_zero))\n",
-    "\n",
-    "    within_bb = np.sqrt((xx_about_zero - bb_centre[0])**2 + (yy_about_zero - bb_centre[1])**2) <= bb_diameter/2\n",
     "    \n",
-    "    background = np.invert(rectangle_mask) & np.invert(within_bb)\n",
+    "    circle_mask = get_circle_mask(bb_centre)\n",
+    "    rect_mask = get_rect_mask(field_centre, field_rotation)\n",
+    "    \n",
+    "    mask = np.concatenate([])\n",
     "    \n",
     "    segmentation_mask = np.concatenate([background[:,:,None], rectangle_mask[:,:,None], within_bb[:,:,None]], axis=2)\n",
     "    \n",
