fixed rect mask bug
Former-commit-id: 2bd65718bf3749dfda20afa78c5c8412a16a4176

--- a/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
@@ -278,14 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "@tf.function\n",
-    "def decode(tensor):\n",
-    "    field_centre = [tensor[0], tensor[1]]\n",
-    "    field_rotation = tensor[2]\n",
-    "    bb_centre = [tensor[3], tensor[4]]\n",
-    "    \n",
-    "    return create_mask(field_centre, field_rotation, bb_centre)"
+    "\n"
    ]
   },
   {
@@ -294,6 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@tf.function\n",
     "def load(image_path, encoding):\n",
     "    image = tf.io.read_file(image_path)\n",
     "    image = tf.io.decode_png(image)\n",
@@ -338,12 +332,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def get_dataset(keys, image_paths, labels):\n",
     "    image_paths_array = np.array([str(image_paths[key]) for key in keys])\n",
     "    labels_array = np.array([transform_labels(labels[key]) for key in keys])\n",
     "\n",
     "    dataset = tf.data.Dataset.from_tensor_slices((image_paths_array, labels_array))\n",
-    "    dataset = dataset.map(load)"
+    "    dataset = dataset.map(load)\n",
+    "    \n",
+    "    return dataset"
    ]
   },
   {
@@ -376,16 +373,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://stackoverflow.com/a/31530106\n",
-    "def extract_blocks(a, blocksize):\n",
-    "    M,N = a.shape\n",
-    "    b0, b1 = blocksize\n",
+    "# # https://stackoverflow.com/a/31530106\n",
+    "# def extract_blocks(a, blocksize):\n",
+    "#     M,N = a.shape\n",
+    "#     b0, b1 = blocksize\n",
     "    \n",
-    "    a = tf.reshape(a, (M//b0,b0,N//b1,b1))\n",
-    "    a = tf.transpose(a, (0,2,1))\n",
-    "    a = tf.reshape(-1, b0, b1)\n",
+    "#     a = tf.reshape(a, (M//b0,b0,N//b1,b1))\n",
+    "#     a = tf.transpose(a, (0,2,1))\n",
+    "#     a = tf.reshape(-1, b0, b1)\n",
     "    \n",
-    "    return a\n"
+    "#     return a\n"
    ]
   },
   {
@@ -403,6 +400,7 @@
    "source": [
     "IMG_SIZE = 128\n",
     "\n",
+    "@tf.function\n",
     "def reduce_expanded_mask(expanded_mask):\n",
     "    expanded_mask = tf.dtypes.cast(expanded_mask, tf.float32)\n",
     "    return tf.reduce_mean(tf.reduce_mean(tf.reshape(expanded_mask, (128, 16, 128, 16)), axis=1), axis=2)"
@@ -427,6 +425,7 @@
     "\n",
     "bb_radius_sqrd = (bb_diameter / 2)**2\n",
     "\n",
+    "@tf.function\n",
     "def get_circle_mask(bb_centre):\n",
     "    expanded_mask = (xx_expand - bb_centre[0])**2 + (yy_expand - bb_centre[1])**2 <= bb_radius_sqrd\n",
     "    circle_mask = reduce_expanded_mask(expanded_mask)\n",
@@ -453,8 +452,7 @@
     "    cos = tf.math.cos(field_rotation_radians)\n",
     "    x = field_centre[0]\n",
     "    y = field_centre[1]\n",
-    "    \n",
-    "    print(tf.shape(x))\n",
+    "\n",
     "\n",
     "    return tf.convert_to_tensor([[cos, -sin, x], [sin, cos, y], [0, 0, 1]])\n",
     "\n",
@@ -523,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_partial_rect_mask(sort_indices, invert=False, horizontal=False):\n",
+    "def get_partial_rect_mask(field_centre, sort_indices):\n",
     "    x1 = bounds_x[sort_indices[0]]\n",
     "    x2 = bounds_x[sort_indices[1]]\n",
     "\n",
@@ -533,16 +531,13 @@
     "    m = (y2 - y1)/(x2 - x1)\n",
     "    c = y1 - m * x1\n",
     "    \n",
-    "    if horizontal:\n",
-    "        if invert:\n",
-    "            rect_mask = (yy_expand - c) / m >= xx_expand\n",
-    "        else:\n",
-    "            rect_mask = (yy_expand - c) / m <= xx_expand\n",
-    "    else: \n",
-    "        if invert:\n",
-    "            rect_mask = yy_expand <= xx_expand*m + c\n",
-    "        else:\n",
-    "            rect_mask = yy_expand >= xx_expand*m + c\n",
+    "    field_x = field_centre[0]\n",
+    "    field_y = field_centre[1]\n",
+    "    \n",
+    "    if (field_y <= field_x*m + c):\n",
+    "        rect_mask = yy_expand <= xx_expand*m + c\n",
+    "    else:\n",
+    "        rect_mask = yy_expand >= xx_expand*m + c\n",
     "    \n",
     "    return rect_mask"
    ]
@@ -609,10 +604,10 @@
     "    horizontal_sort = tf.argsort(bounds_x)\n",
     "    \n",
     "    expanded_mask = (\n",
-    "        get_partial_rect_mask([veritcal_sort[0], veritcal_sort[1]]) &\n",
-    "        get_partial_rect_mask([veritcal_sort[2], veritcal_sort[3]], invert=True) &\n",
-    "        get_partial_rect_mask([horizontal_sort[0], horizontal_sort[1]], horizontal=True) & \n",
-    "        get_partial_rect_mask([horizontal_sort[2], horizontal_sort[3]], horizontal=True, invert=True)\n",
+    "        get_partial_rect_mask(field_centre, [veritcal_sort[0], veritcal_sort[1]]) &\n",
+    "        get_partial_rect_mask(field_centre, [veritcal_sort[2], veritcal_sort[3]]) &\n",
+    "        get_partial_rect_mask(field_centre, [horizontal_sort[0], horizontal_sort[1]]) & \n",
+    "        get_partial_rect_mask(field_centre, [horizontal_sort[2], horizontal_sort[3]])\n",
     "    )\n",
     "    \n",
     "    return reduce_expanded_mask(expanded_mask) * 2 - 1"
@@ -637,19 +632,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "@tf.function\n",
     "def create_mask(field_centre, field_rotation, bb_centre):\n",
     "    \n",
@@ -669,6 +652,58 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "@tf.function\n",
+    "def decode(tensor):\n",
+    "    field_centre = [tensor[0], tensor[1]]\n",
+    "    field_rotation = tensor[2]\n",
+    "    bb_centre = [tensor[3], tensor[4]]\n",
+    "    \n",
+    "    return create_mask(field_centre, field_rotation, bb_centre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image, mask in train_dataset.take(1):\n",
+    "    sample_image, sample_mask = image, mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(image[:,:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(mask[:,:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(mask[:,:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -676,28 +711,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "image_paths train_keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = tf.data.Dataset.from_tensor_slices((train_keys,))\n",
-    "train_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = tf.data.Dataset.from_generator"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
