further fixing of rect mask
Former-commit-id: 52e556dedc8dcc7979e262d35c7f8c84a52349c9

--- a/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
@@ -502,16 +502,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "veritcal_sort = tf.argsort(bounds_y)\n",
-    "horizontal_sort = tf.argsort(bounds_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "veritcal_sort[0:2]"
    ]
   },
@@ -521,12 +511,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_partial_rect_mask(field_centre, sort_indices):\n",
-    "    x1 = bounds_x[sort_indices[0]]\n",
-    "    x2 = bounds_x[sort_indices[1]]\n",
+    "def get_partial_rect_mask(field_centre, x1, x2, y1, y2):\n",
+    "#     x1 = bounds_x[sort_indices[0]]\n",
+    "#     x2 = bounds_x[sort_indices[1]]\n",
     "\n",
-    "    y1 = bounds_y[sort_indices[0]]\n",
-    "    y2 = bounds_y[sort_indices[1]]\n",
+    "#     y1 = bounds_y[sort_indices[0]]\n",
+    "#     y2 = bounds_y[sort_indices[1]]\n",
     "    \n",
     "    m = (y2 - y1)/(x2 - x1)\n",
     "    c = y1 - m * x1\n",
@@ -548,9 +538,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([veritcal_sort[0], veritcal_sort[1]]))\n",
-    "# plt.plot(transformed_x, transformed_y)\n",
-    "# plt.axis('equal')"
+    "partial_masks = [\n",
+    "    get_partial_rect_mask(\n",
+    "        field_centre, bounds_x[i], bounds_x[(i + 1) % 4], bounds_y[i], bounds_y[(i + 1) % 4]\n",
+    "    )\n",
+    "    for i in range(4)]\n",
+    "\n",
+    "\n",
+    "for i in range(4):\n",
+    "    plt.figure()\n",
+    "    \n",
+    "    plt.pcolormesh(\n",
+    "        xx_expand, \n",
+    "        yy_expand, \n",
+    "        partial_masks[i]\n",
+    "    )\n",
+    "    plt.plot(transformed_x, transformed_y)\n",
+    "    plt.axis('equal')"
    ]
   },
   {
@@ -558,33 +562,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([veritcal_sort[2], veritcal_sort[3]], invert=True))\n",
-    "# plt.plot(transformed_x, transformed_y)\n",
-    "# plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([horizontal_sort[0], horizontal_sort[1]], horizontal=True))\n",
-    "# plt.plot(transformed_x, transformed_y)\n",
-    "# plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.pcolormesh(xx_expand, yy_expand, get_partial_rect_mask([horizontal_sort[2], horizontal_sort[3]], horizontal=True, invert=True))\n",
-    "# plt.plot(transformed_x, transformed_y)\n",
-    "# plt.axis('equal')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -599,15 +577,17 @@
     "    bounds_x = transformed_x[0:4]\n",
     "    bounds_y = transformed_y[0:4]\n",
     "\n",
-    "    \n",
-    "    veritcal_sort = tf.argsort(bounds_y)\n",
-    "    horizontal_sort = tf.argsort(bounds_x)\n",
+    "    partial_masks = [\n",
+    "        get_partial_rect_mask(\n",
+    "            field_centre, bounds_x[i], bounds_x[(i + 1) % 4], bounds_y[i], bounds_y[(i + 1) % 4]\n",
+    "        )\n",
+    "        for i in range(4)]\n",
     "    \n",
     "    expanded_mask = (\n",
-    "        get_partial_rect_mask(field_centre, [veritcal_sort[0], veritcal_sort[1]]) &\n",
-    "        get_partial_rect_mask(field_centre, [veritcal_sort[2], veritcal_sort[3]]) &\n",
-    "        get_partial_rect_mask(field_centre, [horizontal_sort[0], horizontal_sort[1]]) & \n",
-    "        get_partial_rect_mask(field_centre, [horizontal_sort[2], horizontal_sort[3]])\n",
+    "        partial_masks[0] &\n",
+    "        partial_masks[1] &\n",
+    "        partial_masks[2] &\n",
+    "        partial_masks[3]\n",
     "    )\n",
     "    \n",
     "    return reduce_expanded_mask(expanded_mask) * 2 - 1"
