troubleshooting final images
Former-commit-id: 94b7c5c067e3e79cc119c09f5721a073a6c88cae

--- a/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/005-just-encoder-arm-pix2pix.ipynb
@@ -201,12 +201,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def transform_to_abs(coords):\n",
-    "    return 63 - np.array(coords)*2\n",
+    "# def transform_to_abs(coords):\n",
+    "#     return 63 - np.array(coords)*2\n",
     "\n",
     "\n",
-    "field_centre = transform_to_abs(label['field_centre'])\n",
-    "bb_centre = transform_to_abs(label['bb_centre'])"
+    "# field_centre = transform_to_abs(label['field_centre'])\n",
+    "# bb_centre = transform_to_abs(label['bb_centre'])"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dim[0] == 1024 and dim[1] == 1024"
+    "# dim[0] == 1024 and dim[1] == 1024"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.array(pymedphys._wlutz.interppoints.translate_and_rotate_transform([10,20], 60))"
+    "# np.array(pymedphys._wlutz.interppoints.translate_and_rotate_transform([10,20], 60))"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.sin(60/180*np.pi)"
+    "# np.sin(60/180*np.pi)"
    ]
   },
   {
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.constant([7, 9, 11], shape=[3])"
+    "# tf.constant([7, 9, 11], shape=[3])"
    ]
   },
   {
@@ -304,7 +304,7 @@
     "    \n",
     "    mask = decode(encoding)\n",
     "    \n",
-    "    return image, mask"
+    "    return image, mask, encoding"
    ]
   },
   {
@@ -433,11 +433,11 @@
     "    return circle_mask * 2 - 1\n",
     "\n",
     "\n",
-    "circle_mask = get_circle_mask(bb_centre)\n",
+    "# circle_mask = get_circle_mask(bb_centre)\n",
     "\n",
-    "plt.pcolormesh(x - .5, y - .5, circle_mask)\n",
-    "plt.colorbar()\n",
-    "plt.axis('equal')"
+    "# plt.pcolormesh(x - .5, y - .5, circle_mask)\n",
+    "# plt.colorbar()\n",
+    "# plt.axis('equal')"
    ]
   },
   {
@@ -476,33 +476,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = get_transformation_matrix(field_centre, field_rotation)\n",
-    "transformed_x, transformed_y = apply_transform(draw_x, draw_y, transform)\n",
+    "# transform = get_transformation_matrix(field_centre, field_rotation)\n",
+    "# transformed_x, transformed_y = apply_transform(draw_x, draw_y, transform)\n",
     "\n",
-    "bounds_x = transformed_x[0:4]\n",
-    "bounds_y = transformed_y[0:4]\n",
+    "# bounds_x = transformed_x[0:4]\n",
+    "# bounds_y = transformed_y[0:4]\n",
     "\n",
-    "plt.plot(transformed_x, transformed_y)\n",
-    "plt.axis('equal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bounds_x = transformed_x[0:4]\n",
-    "bounds_y = transformed_y[0:4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "veritcal_sort[0:2]"
+    "# plt.plot(transformed_x, transformed_y)\n",
+    "# plt.axis('equal')"
    ]
   },
   {
@@ -538,23 +519,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "partial_masks = [\n",
-    "    get_partial_rect_mask(\n",
-    "        field_centre, bounds_x[i], bounds_x[(i + 1) % 4], bounds_y[i], bounds_y[(i + 1) % 4]\n",
-    "    )\n",
-    "    for i in range(4)]\n",
+    "# partial_masks = [\n",
+    "#     get_partial_rect_mask(\n",
+    "#         field_centre, bounds_x[i], bounds_x[(i + 1) % 4], bounds_y[i], bounds_y[(i + 1) % 4]\n",
+    "#     )\n",
+    "#     for i in range(4)]\n",
     "\n",
     "\n",
-    "for i in range(4):\n",
-    "    plt.figure()\n",
+    "# for i in range(4):\n",
+    "#     plt.figure()\n",
     "    \n",
-    "    plt.pcolormesh(\n",
-    "        xx_expand, \n",
-    "        yy_expand, \n",
-    "        partial_masks[i]\n",
-    "    )\n",
-    "    plt.plot(transformed_x, transformed_y)\n",
-    "    plt.axis('equal')"
+    "#     plt.pcolormesh(\n",
+    "#         xx_expand, \n",
+    "#         yy_expand, \n",
+    "#         partial_masks[i]\n",
+    "#     )\n",
+    "#     plt.plot(transformed_x, transformed_y)\n",
+    "#     plt.axis('equal')"
    ]
   },
   {
@@ -571,6 +552,8 @@
    "outputs": [],
    "source": [
     "def get_rect_mask(field_centre, field_rotation):\n",
+    "    field_rotation = 180 - field_rotation\n",
+    "    \n",
     "    transform = get_transformation_matrix(field_centre, field_rotation)\n",
     "    transformed_x, transformed_y = apply_transform(draw_x, draw_y, transform)\n",
     "\n",
@@ -599,13 +582,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rect_mask = get_rect_mask(field_centre, field_rotation)\n",
+    "# rect_mask = get_rect_mask(field_centre, field_rotation)\n",
     "\n",
-    "plt.pcolormesh(x - .5, y - .5, rect_mask)\n",
-    "# plt.plot(transformed_x, transformed_y)\n",
-    "plt.axis('equal')\n",
-    "plt.colorbar()"
+    "# plt.pcolormesh(x - .5, y - .5, rect_mask)\n",
+    "# plt.axis('equal')\n",
+    "# plt.colorbar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_items_from_encoding(encoding):\n",
+    "    field_centre = [encoding[0], encoding[1]]\n",
+    "    field_rotation = encoding[2]\n",
+    "    bb_centre = [encoding[3], encoding[4]]\n",
+    "    \n",
+    "    return field_centre, field_rotation, bb_centre\n",
+    "\n",
+    "\n",
+    "@tf.function\n",
+    "def decode(encoding):    \n",
+    "    return create_mask(*extract_items_from_encoding(encoding))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -632,66 +640,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "@tf.function\n",
-    "def decode(tensor):\n",
-    "    field_centre = [tensor[0], tensor[1]]\n",
-    "    field_rotation = tensor[2]\n",
-    "    bb_centre = [tensor[3], tensor[4]]\n",
+    "x = np.arange(0, IMG_SIZE)\n",
+    "y = np.arange(0, IMG_SIZE)\n",
+    "\n",
+    "for image, mask, encoding in train_dataset.take(1):\n",
+    "    field_centre, field_rotation, bb_centre = extract_items_from_encoding(encoding)\n",
     "    \n",
-    "    return create_mask(field_centre, field_rotation, bb_centre)"
+    "    fig, axs = pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "        x, y, np.array(image)[:,:,0],\n",
+    "        np.array(bb_centre), np.array(field_centre), np.array(field_rotation),\n",
+    "        bb_diameter, edge_lengths, penumbra, units=''\n",
+    "    )\n",
+    "\n",
+    "    plt.contour(x, y, mask[:,:,0], [0], cmap='bwr_r', zorder=20)\n",
+    "    plt.contour(x, y, mask[:,:,1], [0], cmap='bwr_r', zorder=20)\n",
+    "    \n",
+    "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for image, mask in train_dataset.take(1):\n",
-    "    sample_image, sample_mask = image, mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(image[:,:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(mask[:,:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(mask[:,:,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -714,6 +687,13 @@
     "\n",
     "# # plt.contourf(xx_about_zero, yy_about_zero, segmentation_mask, alpha=0.5, cmap='bwr')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
