--- a/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
@@ -16,8 +16,8 @@
     "\n",
     "import tensorflow as tf\n",
     "\n",
-    "from tensorflow.keras.layers import BatchNormalization\n",
-    "BatchNormalization._USE_V2_BEHAVIOR = False"
+    "# from tensorflow.keras.layers import BatchNormalization\n",
+    "# BatchNormalization._USE_V2_BEHAVIOR = False"
    ]
   },
   {
@@ -158,13 +158,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def transform_to_abs(coords):\n",
     "    return 63 - np.array(coords)*2\n",
@@ -183,15 +176,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "@tf.function\n",
     "def reduce_expanded_mask(expanded_mask):\n",
     "    expanded_mask = tf.dtypes.cast(expanded_mask, tf.float32)\n",
     "    return tf.reduce_mean(tf.reduce_mean(tf.reshape(expanded_mask, (128, 16, 128, 16)), axis=1), axis=2)"
@@ -203,12 +188,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tf.function\n",
     "def get_circle_mask(bb_centre):\n",
     "    expanded_mask = (xx_expand - bb_centre[0])**2 + (yy_expand - bb_centre[1])**2 <= bb_radius_sqrd\n",
     "    circle_mask = reduce_expanded_mask(expanded_mask)\n",
     "    \n",
     "    return circle_mask * 2 - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.convert_to_tensor?"
    ]
   },
   {
@@ -223,9 +216,9 @@
     "    cos = tf.math.cos(field_rotation_radians)\n",
     "    x = field_centre[0]\n",
     "    y = field_centre[1]\n",
-    "\n",
-    "\n",
-    "    return tf.convert_to_tensor([[cos, -sin, x], [sin, cos, y], [0, 0, 1]])\n",
+    "    rand = np.random.uniform(0,1)\n",
+    "    \n",
+    "    return tf.convert_to_tensor([[cos, sin, x], [-sin, cos, y], [0, 0, 1]], name=f\"transformation_{rand}\")\n",
     "\n",
     "\n",
     "def apply_transform(xx, yy, transform):\n",
@@ -251,8 +244,8 @@
     "    m = (y2 - y1)/(x2 - x1)\n",
     "    c = y1 - m * x1\n",
     "    \n",
-    "    field_x = field_centre[0]\n",
-    "    field_y = field_centre[1]\n",
+    "    field_x = tf.reshape(field_centre[0], [])\n",
+    "    field_y = tf.reshape(field_centre[1], [])\n",
     "    \n",
     "    if (field_y <= field_x*m + c):\n",
     "        rect_mask = yy_expand <= xx_expand*m + c\n",
@@ -269,7 +262,7 @@
    "outputs": [],
    "source": [
     "def get_rect_mask(field_centre, field_rotation):\n",
-    "    field_rotation = 180 - field_rotation\n",
+    "    field_rotation = field_rotation\n",
     "    \n",
     "    transform = get_transformation_matrix(field_centre, field_rotation)\n",
     "    transformed_x, transformed_y = apply_transform(draw_x, draw_y, transform)\n",
@@ -319,14 +312,8 @@
     "    \n",
     "    return field_centres, field_rotations, bb_centres\n",
     "\n",
-    "@tf.function\n",
     "def decode(encoding):\n",
-    "    return create_mask(*extract_items_from_encoding(encoding))\n",
-    "\n",
-    "\n",
-    "@tf.function\n",
-    "def decode_batch(encodings):\n",
-    "    return create_masks(*extract_items_from_encodings(encodings))"
+    "    return create_mask(*extract_items_from_encoding(encoding))"
    ]
   },
   {
@@ -335,7 +322,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tf.function\n",
     "def load(image_path, encoding):\n",
     "    image = tf.io.read_file(image_path)\n",
     "    image = tf.io.decode_png(image)\n",
@@ -371,16 +357,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_masks(field_centres, field_rotations, bb_centres):    \n",
-    "    masks = [\n",
-    "        create_mask(*items) for items in zip(field_centres, field_rotations, bb_centres)\n",
-    "    ]\n",
-    "        \n",
-    "    masks = tf.concat([mask[None,:,:,:] for mask in masks], axis=0)\n",
-    "    \n",
-    "    return masks\n",
-    "\n",
-    "\n",
     "def create_mask(field_centre, field_rotation, bb_centre):\n",
     "    \n",
     "    circle_mask = get_circle_mask(bb_centre)\n",
@@ -391,7 +367,8 @@
     "    return mask\n",
     "\n",
     "\n",
-    "train_dataset = get_dataset(train_keys, image_paths, labels)"
+    "train_dataset = get_dataset(train_keys, image_paths, labels)\n",
+    "train_dataset.batch(1)"
    ]
   },
   {
@@ -467,8 +444,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def decode_batch(encodings):\n",
+    "    \n",
+    "    mask = tf.Variable(tf.zeros(shape=(1,128,128,2)), name=\"mask\")\n",
+    "    \n",
+    "    for encoding in encodings:\n",
+    "        field_centre = [encoding[0, 0, 0], encoding[0, 0, 1]]\n",
+    "        field_rotation = encoding[0, 0, 2]\n",
+    "        bb_centre = [encoding[0, 0, 3], encoding[0, 0, 4]]\n",
+    "\n",
+    "        circle_mask = get_circle_mask(bb_centre)\n",
+    "        rect_mask = get_rect_mask(field_centre, field_rotation)\n",
+    "\n",
+    "        mask = tf.concat([circle_mask[None,:,:,None], rect_mask[None,:,:,None]], axis=3)\n",
+    "    \n",
+    "    return mask\n",
+    "\n",
+    "\n",
     "def Generator():\n",
-    "    inputs = tf.keras.layers.Input(shape=[128,128,1])\n",
+    "    inputs = tf.keras.layers.Input(shape=[128,128,1], batch_size=1)\n",
     "\n",
     "    down_stack = [\n",
     "        downsample(64, 4, apply_batchnorm=False), # (bs, 64, 64, 64)\n",
@@ -491,11 +485,14 @@
     "    final_dense = tf.keras.layers.Dense(5, activation=tf.keras.layers.LeakyReLU())\n",
     "    x = final_dense(x)\n",
     "    \n",
-    "    print(tf.shape(x))\n",
+    "    print(x)\n",
     "    \n",
-    "    x = decode(x)\n",
+    "    x = decode_batch(x)\n",
     "\n",
-    "    return tf.keras.Model(inputs=inputs, outputs=x)"
+    "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
+    "\n",
+    "\n",
+    "generator = Generator()"
    ]
   },
   {
@@ -504,7 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator = Generator()"
+    "# x = tf.placeholder(tf.float32, shape=(None, 10))"
    ]
   },
   {
