compiles without error\!\!

--- a/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
@@ -240,12 +240,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_partial_rect_mask(field_centre, x1, x2, y1, y2):   \n",
+    "@tf.function\n",
+    "def get_partial_rect_mask(field_centre, x1, x2, y1, y2):  \n",
     "    m = (y2 - y1)/(x2 - x1)\n",
     "    c = y1 - m * x1\n",
     "    \n",
-    "    field_x = tf.reshape(field_centre[0], [])\n",
-    "    field_y = tf.reshape(field_centre[1], [])\n",
+    "    field_x = field_centre[0]\n",
+    "    field_y = field_centre[1]\n",
     "    \n",
     "    if (field_y <= field_x*m + c):\n",
     "        rect_mask = yy_expand <= xx_expand*m + c\n",
@@ -433,6 +434,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def decode_batch(encoding):\n",
+    "    \n",
+    "    field_centre = [encoding[0, 0, 0, 0], encoding[0, 0, 0, 1]]\n",
+    "    field_rotation = encoding[0, 0, 0, 2]\n",
+    "    bb_centre = [encoding[0, 0, 0, 3], encoding[0, 0, 0, 4]]\n",
+    "\n",
+    "    circle_mask = get_circle_mask(bb_centre)\n",
+    "    rect_mask = get_rect_mask(field_centre, field_rotation)\n",
+    "\n",
+    "    mask = tf.concat([circle_mask[None,:,:,None], rect_mask[None,:,:,None]], axis=3)\n",
+    "    \n",
+    "    return mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DecodeToMask(tf.keras.layers.Layer):\n",
+    "    def __init__(self, input_dim=512):\n",
+    "        super(DecodeToMask, self).__init__()\n",
+    "        units = 5\n",
+    "        \n",
+    "        w_init = tf.random_normal_initializer()\n",
+    "        self.w = tf.Variable(initial_value=w_init(shape=(input_dim, units),\n",
+    "                                                  dtype='float32'),\n",
+    "                             trainable=True)\n",
+    "        b_init = tf.zeros_initializer()\n",
+    "        self.b = tf.Variable(initial_value=b_init(shape=(units,),\n",
+    "                                                  dtype='float32'),\n",
+    "                             trainable=True)\n",
+    "        \n",
+    "    def call(self, inputs):\n",
+    "        encodings = tf.matmul(inputs, self.w) + self.b\n",
+    "        return decode_batch(encodings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# down_model = downsample(3, 4)\n",
     "# down_result = down_model(tf.expand_dims(inp, 0))\n",
     "# print (down_result.shape)"
@@ -444,21 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def decode_batch(encodings):\n",
-    "    \n",
-    "    mask = tf.Variable(tf.zeros(shape=(1,128,128,2)), name=\"mask\")\n",
-    "    \n",
-    "    for encoding in encodings:\n",
-    "        field_centre = [encoding[0, 0, 0], encoding[0, 0, 1]]\n",
-    "        field_rotation = encoding[0, 0, 2]\n",
-    "        bb_centre = [encoding[0, 0, 3], encoding[0, 0, 4]]\n",
     "\n",
-    "        circle_mask = get_circle_mask(bb_centre)\n",
-    "        rect_mask = get_rect_mask(field_centre, field_rotation)\n",
-    "\n",
-    "        mask = tf.concat([circle_mask[None,:,:,None], rect_mask[None,:,:,None]], axis=3)\n",
-    "    \n",
-    "    return mask\n",
     "\n",
     "\n",
     "def Generator():\n",
@@ -482,12 +514,8 @@
     "    for down in down_stack:\n",
     "        x = down(x)\n",
     "    \n",
-    "    final_dense = tf.keras.layers.Dense(5, activation=tf.keras.layers.LeakyReLU())\n",
-    "    x = final_dense(x)\n",
-    "    \n",
-    "    print(x)\n",
-    "    \n",
-    "    x = decode_batch(x)\n",
+    "    decode_to_mask = DecodeToMask()\n",
+    "    x = decode_to_mask(x)\n",
     "\n",
     "    return tf.keras.Model(inputs=inputs, outputs=x)\n",
     "\n",
