it looks like it's actually working
Former-commit-id: cb35307fe401fbf732082fa11d8762350a76d2fb

--- a/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
+++ b/examples/labs/rccc/wlutz/tf_model/006-just-encoder-arm-pix2pix.ipynb
@@ -378,6 +378,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for item in train_dataset.take(1):\n",
+    "    sample_image, sample_mask, sample_encoding = item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# x = np.arange(0, IMG_SIZE)\n",
     "# y = np.arange(0, IMG_SIZE)\n",
     "\n",
@@ -529,7 +539,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x = tf.placeholder(tf.float32, shape=(None, 10))"
+    "tf.keras.utils.plot_model(generator, show_shapes=True, dpi=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_output = generator(sample_image[tf.newaxis,...], training=False)\n",
+    "plt.imshow(gen_output[0,...,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(gen_output[0,...,1])"
    ]
   },
   {
